# MintOS

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  config.example.json  docker-compose.yml  pyproject.toml
src/mos/: __init__.py
src/mos/cli/: config.py  init.py  mcp.py  mos.py  plugin.py  streamlit.py
src/mos/core/: baseconfig.py  config.py  lock.py  logging.py  mcp.py  plugin.py  resource.py  streamlit.py
src/mos/core/dataflow/: flat_json_model.py  types.py
src/mos/core/grafana/: __init__.py  manage.py
src/mos/core/llm/: openai_compatible_api.py
src/mos/core/task/: daemon_launcher.py  manager.py  process_manager.py  scheduler.py
src/mos/web/: __init__.py  app.py
tests/: test_core_config.py  test_database.py  test_llm_openai_compatible.py  test_lock.py  test_plugin_create.py
